--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "kapsule",
-  "version": "1.14.5",
+  "name": "kapsule-2",
+  "version": "2.0.0",
   "description": "A closure based Web Component library",
   "type": "module",
-  "unpkg": "dist/kapsule.js",
-  "main": "dist/kapsule.mjs",
-  "module": "dist/kapsule.mjs",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "exports": {
     "types": "./dist/index.d.ts",
-    "umd": "./dist/kapsule.js",
-    "default": "./dist/kapsule.mjs"
+    "default": "./dist/index.js"
   },
   "sideEffects": false,
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vasturiano/kapsule.git"
+    "url": "git+https://github.com/sakgoyal/kapsule.git"
   },
   "keywords": [
     "kapsule",
@@ -27,17 +25,17 @@
     "d3js"
   ],
   "author": {
-    "name": "Vasco Asturiano",
-    "url": "https://github.com/vasturiano"
+    "name": "Saksham Goyal",
+    "url": "https://github.com/sakgoyal"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/vasturiano/kapsule/issues"
+    "url": "https://github.com/sakgoyal/kapsule/issues"
   },
-  "homepage": "https://github.com/vasturiano/kapsule",
+  "homepage": "https://github.com/sakgoyal/kapsule",
   "scripts": {
-    "build": "vite build",
-    "dev": "vite dev",
+    "build": "tsup src/index.ts --format esm --dts --minify",
+    "lint": "tsc",
     "prepare": "npm run build"
   },
   "files": [
@@ -49,10 +47,9 @@
   "devDependencies": {
     "@types/lodash-es": "^4",
     "@types/node": "^20",
+    "tsup": "^8",
     "typescript": "^5.5",
-    "vite": "^5.3.4",
-    "vite-plugin-dts": "^4.0.0-beta.1",
-    "vitest": "^2.0.3"
+    "vitest": "^2"
   },
   "engines": {
     "node": ">=20"
